--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,11 @@
     transform: rotate(360deg);
   }
 }
+
+.pretty-border {
+	background-color: #cde364;
+	border-top: 3px dotted #000;
+	border-bottom: 3px dotted #000;
+	box-shadow: inset 0 -1px 0 0 #000, inset 0 1px 0 0 #000, 0 1px 0 0 #000, 0 -1px 0 0 #000;
+	margin-bottom: 1px;
+}
